Mar 6, 2007

  * ADDED: SHA-1 and SHA-2 support in new library(sha).

Feb 28, 2007

  * Re-renerated HTML docs (outdated)

Feb 26, 2007

  * FIXED: complete redesign of nonblock.c socket layer to deal with
    validness of socket handles.  

Feb 9, 2007

  * ADDED: MD5 hashes to crypt.  Added library(crypt) to Windows version
    (only supporting MD5).

Feb 2, 2007

  * Fixed alloca issues in socket.c.  Richard O'Keefe.

Jan 31, 2007

  * Documentation update to document issues in the Windows timer
    implementation.

Jan 23, 2007

  * size_t cleanup.

Dec 12, 2006

  * FIXED: Error handling in read_line_to_codes/[2,3] and
    read_stream_to_codes/[2,3].

Nov 8, 2006

  * CLEANUP: GCC warnings

Oct 27, 2006

  * FIXED: random/3 never to generate upper bound.   Nicos.

Oct 16, 2006

  * ADDED: YAP/SICStus compatible library(random).

Sep 7, 2006

  * FIXED: Bug#205 make --> $(MAKE).  Marc Espie

Feb 1, 2006

  * FIXED: Remove DOS ^M from files in maildrop package.  Richard O'Keefe.

Jan 19, 2006

  * Fixed: Bug#137: make time.c compile for single-threaded operation
    Keri Harris.

Jan 12, 2006

  * Fixed: rewrote most of time.c, providing alarm/4 using portable
    pthread code.

Jan 10, 2006

  * UDP ssize_t portability issues

Dec 23, 2005

  * Start work on UDP support in socket.pl.

Oct 14, 2005

  * Fixed signedness error in library memfile, returning incorrect values
    for size_memory_file/2

Oct 11, 2005

  * PORT: Use plld to compile maildrop as position independent code

May 22, 2005

  * PORT: Added maildrop RFC libraries to distribution

Apr 23, 2005

  * FIXED: mime_parse/3: read stream with Sgetcode rather than Sgetc to
    deal with encoding issues.

Feb 17, 2005

  * ADDED: Provide wide-character support for library(memfile).

Dec 16, 2004

  * FIXED: Socket and ssl interaction problems (Windows).  Matt Lilley.

October 04, 2004

  * FIXED: library(socket) and library(ssl): potential crash and starvation